# emscchart

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: build.yml  lint.yml  sonarqube.yml  unittest.yml
cmake/: CPM.cmake  format.cmake  googletest.cmake  gtest.cmake  nlohmann_json.cmake
example/: CMakeLists.txt  draw_a_point.cc  draw_a_point2.cc  example1.cc  helper.h  point_style_circle.cc
include/: config.h  controller.h
src/: bubble.cc  bubble.h  canvas.cc  canvas.h  canvas_rendering_context.h  config.cc  controller.cc  dataset_controller.cc  dataset_controller.h  element.h  geometric.h  line.cc  line.h  options.h  point.cc  point.h  radar.cc  radar.h  sdl2_rendering_context.cc  sdl2_rendering_context.h  types.h
test/: .clang-tidy  CMakeLists.txt  bubble_test.cc  config_test.cc  controller_test.cc  line_test.cc  mock_rendering_context.h  point_test.cc  radar_test.cc
